--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "eslint-config-standard": "^17.0.0",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
+    },
+    "dependencies": {
+        "date-fns": "^2.29.3"
     }
 }
